# xyz

./: .gitignore  CMakeLists.txt  README.md
cmake/: log_config.h.in  utils.cmake  version.h.in
include/xyz/: define.h  xyz.h
include/xyz/json/: json.h
include/xyz/log/: log.hpp  xyz_assert.hpp
src/: CMakeLists.txt  version.cpp
src/json/: CMakeLists.txt
src/log/: CMakeLists.txt  log.cpp
test/: CMakeLists.txt  log_test.cpp  test_json.cpp  test_log.cpp
